--- a/build.gradle
+++ b/build.gradle
@@ -121,6 +121,9 @@ dependencies {
     compile "org.imsglobal:basiclti-util:1.1.2"
     compile "org.jasypt:jasypt:1.9.2"
 
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.squareup.moshi:moshi:1.5.0'
+
     compile "io.dropwizard.metrics:metrics-core"
     compile "io.dropwizard.metrics:metrics-annotation:${dropwizard_metrics_version}"
     compile "io.dropwizard.metrics:metrics-ehcache:${dropwizard_metrics_version}"
