update Java Server and Spring dependencies to the newest state, update to Gradle 4.0.2
Signed-off-by: Stephan Krusche <s.krusche@tum.de>

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -23,12 +23,18 @@ spring:
         username: root
         password:
         hikari:
+            maximumPoolSize: 130
             data-source-properties:
                 cachePrepStmts: true
                 prepStmtCacheSize: 250
                 prepStmtCacheSqlLimit: 2048
                 useServerPrepStmts: true
     jpa:
+        hibernate:
+            connection:
+            charSet: utf8mb4
+            characterEncoding: utf8mb4
+            useUnicode: true
         database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         database: MYSQL
         show_sql: true
