--- a/gradle.properties
+++ b/gradle.properties
@@ -1,34 +1,34 @@
 rootProject.name=exercise-application
 profile=dev
-assertj_core_version=3.3.0
+assertj_core_version=3.8.0
 awaility_version=1.7.0
 commons_lang_version=2.6
-commons_io_version=2.4
-cucumber_version=1.2.4
+commons_io_version=2.5
+cucumber_version=1.2.5
 dropwizard_metrics_version=3.1.2
-logstash_logback_encoder_version=4.6
+logstash_logback_encoder_version=4.11
 
 javax_inject_version=1
 javax_transaction_version=1.2
 json_path_version=0.9.1
-jackson_version=2.7.3
+jackson_version=2.9.0
 geronimo_javamail_1_4_mail_version=1.8.4
-hazelcast_version=3.6.1
-hibernate_entitymanager_version=4.3.11.Final
-HikariCP_version=2.4.6
-liquibase_slf4j_version=1.2.1
-liquibase_core_version=3.4.2
-liquibase_hibernate4_version=3.5
-hibernate_validator_version=5.2.1.Final
+hazelcast_version=3.8.1
+hibernate_version=5.2.10.Final
+HikariCP_version=2.6.3
+liquibase_slf4j_version=2.0.0
+liquibase_core_version=3.5.3
+liquibase_hibernate4_version=3.6
+hibernate_validator_version=5.4.1.Final
 metrics_spark_reporter_version=1.2
-metrics_spring_version=3.1.2
-spring_security_version=4.1.0.RELEASE
-springfox_version=2.4.0
-spring_boot_version=1.3.5.RELEASE
+metrics_spring_version=3.1.3
+spring_security_version=4.2.3.RELEASE
+springfox_version=2.7.0
+spring_boot_version=1.5.6.RELEASE
 mysql_connector_java_version=5.1.36
 h2_version=1.4.188
 
-gatling_version=2.1.7
+gatling_version=2.2.5
 mapstruct_version=1.0.0.Final
 
 
@@ -36,7 +36,6 @@ mapstruct_version=1.0.0.Final
 
 ## The Gradle daemon aims to improve the startup and execution time of Gradle.
 ## When set to true the Gradle daemon is to run the build.
-## TODO: disable daemon on CI, since builds should be clean and reliable on servers
 ## un comment the below line to enable the daemon
 
 #org.gradle.daemon=true
