--- a/gradle/profile_prod.gradle
+++ b/gradle/profile_prod.gradle
@@ -1,5 +1,5 @@
 import org.apache.tools.ant.taskdefs.condition.Os
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'com.moowork.node'
 apply plugin: 'com.moowork.gulp'
 
