add certain project files to make the setup easier
Signed-off-by: Stephan Krusche <s.krusche@tum.de>

--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,6 @@ local.properties
 ######################
 # Intellij
 ######################
-.idea/**
-*.iml
 *.iws
 *.ipr
 *.ids
@@ -145,3 +143,4 @@ Desktop.ini
 .eslintcache
 
 vpproject
+/out
