Introduced UI widget for umlresult

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -87,7 +87,7 @@ jhipster:
             port: 2003
             prefix: ExerciseApplication
         logs: # Reports Dropwizard metrics in the logs
-            enabled: true
+            enabled: false
             reportFrequency: 60 # in seconds
     logging:
         logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
