--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ commons_io_version=2.5
 cucumber_version=1.2.5
 dropwizard_metrics_version=3.1.2
 logstash_logback_encoder_version=4.11
-
+jjwt_version=0.7.0
 javax_inject_version=1
 javax_transaction_version=1.2
 json_path_version=0.9.1
