--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -19,7 +19,7 @@ management:
 
 spring:
     application:
-        name: ExerciseApplication
+        name: ArTEMiS
     profiles:
         # The commented value for `active` can be replaced with valid spring profiles to load.
         # Otherwise, it will be filled in by gradle when building the WAR file
