--- a/src/main/docker/mysql.yml
+++ b/src/main/docker/mysql.yml
@@ -6,7 +6,7 @@ services:
         environment:
             - MYSQL_USER=root
             - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-            - MYSQL_DATABASE=exerciseapplication
+            - MYSQL_DATABASE=artemis
         ports:
             - 3306:3306
         command: mysqld --lower_case_table_names=1 --skip-ssl
