--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -10,7 +10,6 @@
 # http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 # ===================================================================
 
-
 spring:
     devtools:
         restart:
@@ -18,7 +17,7 @@ spring:
         livereload:
             enabled: false # we use gulp + BrowserSync for livereload
     datasource:
-        url: jdbc:mysql://localhost:3306/ExerciseApplication?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://localhost:3306/ArTEMiS?useUnicode=true&characterEncoding=utf8&useSSL=false
         name:
         username: root
         password:
@@ -64,16 +63,20 @@ server:
 # ===================================================================
 
 jhipster:
-    cache: # Hibernate 2nd level cache, used by CacheConfiguration
-        timeToLiveSeconds: 3600
-        hazelcast:
-            backupCount: 1
-        ehcache:
-            maxBytesLocalHeap: 16M
+    cache: # Cache configuration
+        hazelcast: # Hazelcast distributed cache
+            time-to-live-seconds: 3600
+            backup-count: 1
     security:
         rememberMe:
             # security key (this key should be unique for your application, and kept secret)
             key: 1e8ac98bc31f6bc463c70dace796da10dba1f4f3
+        authentication:
+            jwt:
+                secret: my-secret-token-to-change-in-production
+                # Token is valid 24 hours
+                token-validity-in-seconds: 86400
+                token-validity-in-seconds-for-remember-me: 2592000
     mail: # specific JHipster mail property, for standard properties see MailProperties
         from: ArTEMiS@localhost
     metrics: # DropWizard Metrics configuration, used by MetricsConfiguration
@@ -96,5 +99,3 @@ jhipster:
             host: localhost
             port: 5000
             queueSize: 512
-    swagger: # swagger is enabled. It can be disabled by pasing 'no-swagger' profile at run time as well
-        enabled: true
