--- a/gradle/liquibase.gradle
+++ b/gradle/liquibase.gradle
@@ -17,7 +17,7 @@ task liquibaseDiffChangelog(dependsOn: compileJava, type: JavaExec) {
     args "--referenceUrl=hibernate:spring:de.tum.in.www1.exerciseapp.domain?dialect=org.hibernate.dialect.MySQL5InnoDBDialect&hibernate.ejb.naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy"
     args "--username=root"
     args "--password="
-    args "--url=jdbc:mysql://localhost:3306/ExerciseApplication"
+    args "--url=jdbc:mysql://localhost:3306/ArTEMiS"
     args "--driver=com.mysql.jdbc.Driver"
     args "diffChangeLog"
 
