--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ArTEMiS",
-  "version": "0.0.0",
+  "version": "1.3.0",
   "description": "AuTomated assEssment Management System",
   "private": true,
   "cacheDirectories": [
@@ -8,60 +8,60 @@
     "src/main/webapp/bower_components"
   ],
   "devDependencies": {
-    "bower": "1.7.9",
-    "browser-sync": "2.12.10",
-    "del": "2.2.0",
+    "bower": "1.8.0",
+    "browser-sync": "2.18.13",
+    "del": "3.0.0",
     "eslint-config-angular": "0.5.0",
-    "eslint-plugin-angular": "1.0.1",
-    "event-stream": "3.3.2",
-    "generator-jhipster": "3.4.2",
+    "eslint-plugin-angular": "3.0.0",
+    "event-stream": "3.3.4",
+    "generator-jhipster": "4.6.2",
     "gulp": "3.9.1",
     "gulp-angular-filesort": "1.1.1",
-    "gulp-angular-templatecache": "1.9.0",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-changed": "1.3.0",
+    "gulp-angular-templatecache": "2.0.0",
+    "gulp-autoprefixer": "4.0.0",
+    "gulp-changed": "3.1.0",
     "gulp-cssnano": "2.1.2",
-    "gulp-eslint": "2.0.0",
+    "gulp-eslint": "4.0.0",
     "gulp-expect-file": "0.0.7",
-    "gulp-flatten": "0.2.0",
+    "gulp-flatten": "0.3.1",
     "gulp-footer": "1.0.5",
-    "gulp-htmlmin": "2.0.0",
-    "gulp-if": "2.0.1",
-    "gulp-imagemin": "3.0.1",
-    "gulp-inject": "4.1.0",
+    "gulp-htmlmin": "3.0.0",
+    "gulp-if": "2.0.2",
+    "gulp-imagemin": "3.3.0",
+    "gulp-inject": "4.2.0",
     "gulp-natural-sort": "0.1.1",
     "gulp-ng-annotate": "2.0.0",
     "gulp-rename": "1.2.2",
-    "gulp-ng-constant": "1.1.0",
-    "gulp-notify": "2.2.0",
+    "gulp-ng-constant": "2.0.0-2",
+    "gulp-notify": "3.0.0",
     "gulp-plumber": "1.1.0",
-    "gulp-protractor": "2.4.0",
-    "gulp-util": "3.0.7",
-    "gulp-rev": "7.0.0",
+    "gulp-protractor": "4.1.0",
+    "gulp-util": "3.0.8",
+    "gulp-rev": "8.0.0",
     "gulp-rev-replace": "0.4.3",
-    "gulp-sass": "2.3.1",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-uglify": "1.5.3",
-    "gulp-useref": "3.1.0",
-    "jasmine-core": "2.4.1",
-    "jasmine-reporters": "2.1.1",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "1.0.1",
-    "karma-coverage": "1.0.0",
-    "karma-jasmine": "1.0.2",
-    "karma-junit-reporter": "1.0.0",
-    "karma-phantomjs-launcher": "1.0.0",
+    "gulp-sass": "3.1.0",
+    "gulp-sourcemaps": "2.6.0",
+    "gulp-uglify": "3.0.0",
+    "gulp-useref": "3.1.2",
+    "jasmine-core": "2.7.0",
+    "jasmine-reporters": "2.2.1",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage": "1.1.1",
+    "karma-jasmine": "1.1.0",
+    "karma-junit-reporter": "1.2.0",
+    "karma-phantomjs-launcher": "1.0.4",
     "karma-script-launcher": "1.0.0",
     "lazypipe": "1.0.1",
-    "lodash": "4.13.1",
+    "lodash": "4.17.4",
     "main-bower-files": "2.13.1",
-    "map-stream": "0.0.6",
-    "phantomjs-prebuilt": "2.1.7",
-    "protractor": "3.3.0",
-    "protractor-jasmine2-screenshot-reporter": "0.3.1",
+    "map-stream": "0.0.7",
+    "phantomjs-prebuilt": "2.1.14",
+    "protractor": "5.1.2",
+    "protractor-jasmine2-screenshot-reporter": "0.4.0",
     "proxy-middleware": "0.15.0",
-    "run-sequence": "1.2.1",
-    "yargs": "4.7.1"
+    "run-sequence": "2.1.0",
+    "yargs": "8.0.2"
   },
   "engines": {
     "node": "^4.3"
