--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -88,18 +88,18 @@ artemis:
   result-retrieval-delay: 5000
   jira:
     url: https://jirabruegge.in.tum.de
-    user: <username>
-    password: <password>
+    user: ga-<secret>
+    password: <secret>
     instructor-group-name: <group>
   bitbucket:
     url: https://repobruegge.in.tum.de
-    user: <username>
-    password: <password>
+    user: ga-<secret>
+    password: <secret>
   bamboo:
     url: https://bamboobruegge.in.tum.de
     bitbucket-application-link-id: <application-link-id>
-    user: <username>
-    password: <password>
+    user: ga-<secret>
+    password: <secret>
   lti:
     id: artemis_lti
     oauth-key: artemis_lti_key
@@ -108,7 +108,7 @@ artemis:
     user-group-name: edx
   git:
     name: ArTEMiS
-    email: <email>
+    email: dmagurev@gmail.com
 
 
 # ===================================================================
